solved-nav-z-index

--- a/projects freecodecamp/Pratical THMG/Contract page/index.css
+++ b/projects freecodecamp/Pratical THMG/Contract page/index.css
@@ -18,6 +18,7 @@ html {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 nav {
